--- a/Reports/Reports/bin/Reports.dll.config
+++ b/Reports/Reports/bin/Reports.dll.config
@@ -8,8 +8,11 @@
 	  <add key="ConnectionString" value="Data Source=172.16.16.145;Initial Catalog=HISLive_PFBSH_07Mar2023;User ID=MobileUser;Password=PFBSH@123" />
 	  <add key="ReportPath" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\" />
 	  <add key="ReportLocation" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\PDF\\" />
+	  <add key="PrescriptionLocation" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\PDF\\" />
+	  <add key="SickLeaveLocation" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\PDF\\" />
 	  <add key="ftpserver" value="172.16.16.40" />
 	  <add key="ftppath" value="PatientPhoto" />
+	  <add key="ftppath_SickLeave" value ="SickLeave_Approved"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
