--- a/Reports/Reports/bin/Reports.dll.config
+++ b/Reports/Reports/bin/Reports.dll.config
@@ -536,37 +536,37 @@
 	  <add key="ConsultationApproval" value="YES" />
 	  <add key="ConsultationApprovalSpecialisations" value="2" />
 
-	  <add key="PatientcurrentlyIP" value="" />
-	  <add key="PatientcurrentlyEMR" value="" />
-	  <add key="PatientOutstandingAmount" value="" />
-	  <add key="AllowCreditBillingIfGradeBlocked" value="" />
-	  <add key="GradeBlocked" value="" />
-	  <add key="CompanyPatientBlocked" value="" />
-	  <add key="BlockedReason" value="" />
-	  <add key="InsuranceCompanyPatientExpired" value="" />
-	  <add key="CompanyContractDateExpired" value="" />
-	  <add key="InsuranceCardExpired" value="" />
-	  <add key="NoAPPGBill" value="" />
-	  <add key="OPUnBilledPrescLimitinDays" value="" />
-	  <add key="NoRecordsFound" value="" />
-	  <add key="DoctorFollowup" value="" />
-	  <add key="Yaico" value="" />
-	  <add key="Creditbillnotpossibleforpatient" value="" />
-	  <add key="IsGeneralExcluded" value="" />
-	  <add key="OPConsultationSameDayDepartment" value="" />
-	  <add key="CCDSDSD" value="" />
-	  <add key="LAVDE" value="" />
-	  <add key="CARD" value="" />
-	  <add key="LOANM" value="" />
-	  <add key="CRDiscountforPatient" value="" />
-	  <add key="CCNDCARD" value="" />
-	  <add key="IsLimitExceeds" value="" />
-	  <add key="OpBillingValidationofProfileAndPHC" value="" />
-	  <add key="IsGeneralExcludedGroup" value="" />
-	  <add key="ICECBNP" value="" />
-	  <add key="TAXtype" value="" />
-	  <add key="NewVisitOrderTypeId" value="" />
-	  <add key="FollowUpMsgYESNO" value="" />
+	  <add key="PatientcurrentlyIP" value="PatientcurrentlyIP" />
+	  <add key="PatientcurrentlyEMR" value="PatientcurrentlyEMR" />
+	  <add key="PatientOutstandingAmount" value="PatientOutstandingAmount" />
+	  <add key="AllowCreditBillingIfGradeBlocked" value="AllowCreditBillingIfGradeBlocked" />
+	  <add key="GradeBlocked" value="GradeBlocked" />
+	  <add key="CompanyPatientBlocked" value="CompanyPatientBlocked" />
+	  <add key="BlockedReason" value="BlockedReason" />
+	  <add key="InsuranceCompanyPatientExpired" value="InsuranceCompanyPatientExpired" />
+	  <add key="CompanyContractDateExpired" value="CompanyContractDateExpired" />
+	  <add key="InsuranceCardExpired" value="InsuranceCardExpired" />
+	  <add key="NoAPPGBill" value="NoAPPGBill" />
+	  <add key="OPUnBilledPrescLimitinDays" value="OPUnBilledPrescLimitinDays" />
+	  <add key="NoRecordsFound" value="NoRecordsFound" />
+	  <add key="DoctorFollowup" value="DoctorFollowup" />
+	  <add key="Yaico" value="Yaico" />
+	  <add key="Creditbillnotpossibleforpatient" value="Creditbillnotpossibleforpatient" />
+	  <add key="IsGeneralExcluded" value="IsGeneralExcluded" />
+	  <add key="OPConsultationSameDayDepartment" value="OPConsultationSameDayDepartment" />
+	  <add key="CCDSDSD" value="CCDSDSD" />
+	  <add key="LAVDE" value="LAVDE" />
+	  <add key="CARD" value="CARD" />
+	  <add key="LOANM" value="LOANM" />
+	  <add key="CRDiscountforPatient" value="CRDiscountforPatient" />
+	  <add key="CCNDCARD" value="CCNDCARD" />
+	  <add key="IsLimitExceeds" value="IsLimitExceeds" />
+	  <add key="OpBillingValidationofProfileAndPHC" value="OpBillingValidationofProfileAndPHC" />
+	  <add key="IsGeneralExcludedGroup" value="IsGeneralExcludedGroup" />
+	  <add key="ICECBNP" value="ICECBNP" />
+	  <add key="TAXtype" value="TAXtype" />
+	  <add key="NewVisitOrderTypeId" value="NewVisitOrderTypeId" />
+	  <add key="FollowUpMsgYESNO" value="FollowUpMsgYESNO" />
 	  
 	  
 	  
