--- a/Reports/Web.config
+++ b/Reports/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
   <appSettings>
+	  <add key="log4net.Internal.Debug" value="true"/>
 	  <add key="ConnectionString" value="Data Source=172.16.16.145;Initial Catalog=HISLive_PFBSH_07Mar2023;User ID=MobileUser;Password=PFBSH@123" />
 	  <add key="ReportPath" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\" />
 	  <add key="ReportLocation" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\PDF\\" />
@@ -646,4 +647,14 @@
       <endpoint address="http://172.16.16.53/Wipro.NxG.IPBilling/IPBillingServiceReference.svc" binding="basicHttpBinding" bindingConfiguration="SvcCommonBinding" contract="IPBillingServiceClient.IPBillingServiceContract" name="IPBillingEndpoint" />
     </client>
   </system.serviceModel>
+  <system.diagnostics>
+    <trace autoflush="true">
+        <listeners>
+            <add 
+                name="textWriterTraceListener" 
+                type="System.Diagnostics.TextWriterTraceListener" 
+                initializeData="C:\tmp\PFBSH\log4net.txt" />
+        </listeners>
+    </trace>
+</system.diagnostics>
 </configuration>
