--- a/Reports/log4net.config
+++ b/Reports/log4net.config
@@ -10,7 +10,7 @@
       </layout>
     </appender>
     <appender name="file" type="log4net.Appender.RollingFileAppender">
-      <file value="myapp.log" />
+      <file value="C:\tmp\PFBSH\log4net.txt" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="5" />
