Fix null pointer issues - GetPayment

--- a/Reports/Web.config
+++ b/Reports/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <appSettings>
 	  <add key="log4net.Internal.Debug" value="true"/>
-	  <add key="ConnectionString" value="Data Source=172.16.16.145;Initial Catalog=HISLive_PFBSH_07Mar2023;User ID=MobileUser;Password=PFBSH@123" />
+	  <add key="ConnectionString" value="Data Source=172.16.16.145;Initial Catalog=HISLive_PFBSH_26Mar2024;User ID=MobileUser;Password=PFBSH@123" />
 	  <add key="ReportPath" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\" />
 	  <add key="ReportLocation" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\PDF\\" />
 	  <add key="PrescriptionLocation" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\PDF\\" />
@@ -15,7 +15,7 @@
 	  <add key="ftppath" value="PatientPhoto" />
 	  <add key="ftppath_SickLeave" value="SickLeave_Approved" />
 
-	  <add key="DBConnectionStringMasters" value="Data Source=172.16.16.145;Initial Catalog=HISLive_PFBSH_07Mar2023;User ID=MobileUser;Password=PFBSH@123" />
+	  <add key="DBConnectionStringMasters" value="Data Source=172.16.16.145;Initial Catalog=HISLive_PFBSH_26Mar2024;User ID=MobileUser;Password=PFBSH@123" />
 	  <add key="DefaultWorkstationId" value="2" />
 	  <add key="DefaultUserId" value="1" />
 	  <add key="HISConfig" value="1" />
@@ -25,7 +25,7 @@
 	  
 	  
 
-	  <add key="OPUnBilledPrescLimitinDays" value="null" />
+	  <add key="OPUnBilledPrescLimitinDays" value="30" />
 	  <add key="BillDocCheck" value="YES" />
 	  <add key="NationalityIDBasedSearch" value="NO" />
 	  <add key="PrescDaysRaise" value="99" />
