fix crystal report deps

--- a/Reports/Web.config
+++ b/Reports/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-	  <add key="log4net.Internal.Debug" value="true"/>
+	  <add key="log4net.Internal.Debug" value="true" />
 	  <add key="ConnectionString" value="Data Source=172.16.16.145;Initial Catalog=HISLive_PFBSH_26Mar2024;User ID=MobileUser;Password=PFBSH@123" />
 	  <add key="ReportPath" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\" />
 	  <add key="ReportLocation" value="C:\\Users\\Swathi\\Sangamesh\\Reports\\PDF\\" />
@@ -608,6 +608,10 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.17.0" newVersion="2.0.17.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -650,10 +654,7 @@
   <system.diagnostics>
     <trace autoflush="true">
         <listeners>
-            <add 
-                name="textWriterTraceListener" 
-                type="System.Diagnostics.TextWriterTraceListener" 
-                initializeData="C:\tmp\PFBSH\log4net.txt" />
+            <add name="textWriterTraceListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\tmp\PFBSH\log4net.txt" />
         </listeners>
     </trace>
 </system.diagnostics>
